# Retail_Sentiment_and_Market_Volatility

./: .gitignore  README.md  config.py  pyproject.toml
data/: data_dictionary.csv  data_dictionary.md
data/processed/: panel.csv
data/raw/news/: AAPL_202301.csv  AAPL_202302.csv  AAPL_202303.csv  AAPL_202304.csv  AAPL_202305.csv  AAPL_202306.csv  AAPL_202307.csv  AAPL_202308.csv  AAPL_202309.csv  AAPL_202310.csv  AAPL_202311.csv  AAPL_202312.csv  AAPL_202401.csv  AAPL_202402.csv  AAPL_202403.csv  AAPL_202404.csv  AAPL_202405.csv  AAPL_202406.csv  AAPL_202407.csv  AAPL_202408.csv  AAPL_202409.csv  AAPL_202410.csv  AAPL_202411.csv  AAPL_202412.csv  NVDA_202301.csv  NVDA_202302.csv  NVDA_202303.csv  NVDA_202304.csv  NVDA_202305.csv  NVDA_202306.csv  NVDA_202307.csv  NVDA_202308.csv  NVDA_202309.csv  NVDA_202310.csv  NVDA_202311.csv  NVDA_202312.csv  NVDA_202401.csv  NVDA_202402.csv  NVDA_202403.csv  NVDA_202404.csv  (+32 more)
data/raw/prices/: AAPL.csv  ADBE.csv  AMD.csv  AMZN.csv  ARM.csv  AVGO.csv  CRM.csv  CSCO.csv  GOOGL.csv  IBM.csv  INTC.csv  META.csv  MSFT.csv  MU.csv  NFLX.csv  NOW.csv  NVDA.csv  ORCL.csv  PLTR.csv  QCOM.csv  SHOP.csv  TSLA.csv  TXN.csv  UBER.csv
data/raw/stocktwits/: AAPL.csv  ADBE.csv  AMD.csv  AMZN.csv  ARM.csv  AVGO.csv  CSCO.csv  GOOGL.csv  IBM.csv  INTC.csv  META.csv  MSFT.csv  MU.csv  NFLX.csv  NOW.csv  NVDA.csv  ORCL.csv  PLTR.csv  QCOM.csv  SHOP.csv  TSLA.csv  TXN.csv  UBER.csv
src/: build_features.py  collect_news_sentiment.py  collect_prices.py  collect_stocktwits.py  make_data_dictionary.py  test_multiticker.py  test_sources.py
